--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,11 @@
 Package: dmetatools
 Type: Package
 Title: Computational tools for meta-analysis of diagnostic accuracy test
-Version: 1.0.0
-Date: 2020-04-04
+Version: 1.0.1
+Date: 2020-04-08
 Author: Hisashi Noma
 Maintainer: Hisashi Noma <noma@ism.ac.jp>
-Description: A R package for computational tools of meta-analysis of diagnostic accuracy test. This package enables computations of confidence interval for AUC of summary ROC curve and some related AUC-based inference methods.
+Description: Computational tools for meta-analysis of diagnostic accuracy test. This package enables computations of confidence interval for the AUC of summary ROC curve and some related AUC-based inference methods.
 Depends:
   MASS, doSNOW, doParallel, mada
 License: GPL-3
